Prototype Discovery Services with Stork